# git-year

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: publish-pypi.yml  publish-testpypi.yml
git_year/: __init__.py  cli.py
