[project]
name = "git-year"
version = "0.5.5"
description = "A compact terminal heatmap showing one year of Git commits (like GitHub contributions, but with compact bars instead of squares, to fit into a smaller terminal window)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  { name="Serge Velbovets", email="serge@velbix.com" }
]

dependencies = []

[project.scripts]
git-year = "git_year.cli:main"

[tool.setuptools]
packages = ["git_year"]

[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"
