[project]
name = "git-year"
version = "0.5.5"
description = "A GitHub-style contribution heatmap for your terminal, using vertical bars instead of squares to fit comfortably in small terminal windows."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  { name="Serge Velbovets", email="serge@velbix.com" }
]

dependencies = []

[project.scripts]
git-year = "git_year.cli:main"

[tool.setuptools]
packages = ["git_year"]

[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"

keywords = [
    "git",
    "github",
    "heatmap",
    "contributions",
    "cli",
    "terminal",
    "ascii",
    "calendar",
    "activity",
    "contribution-graph",
    "heatmap-cli",
    "github-style",
    "grid",
    "commits",
]